added circle shape, name, and description

--- a/page/style.css
+++ b/page/style.css
@@ -55,3 +55,12 @@
 	width: 200px;
 	height: 100px;
 }
+
+#circle-div{
+	width: 100px;
+	height: 100px;
+	background: white;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+}
